--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.5",
     "cookie": "^0.4.1",
     "next": "^11.1.2",
     "react": "17.0.2",
@@ -16,7 +17,8 @@
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.4.0"
+    "redux-thunk": "^2.4.0",
+    "swr": "^1.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
