--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextjs-instagram-clone",
+  "name": "nextjs-image-post-tutorial",
   "private": true,
   "scripts": {
     "dev": "next dev",
